--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,6 @@ python-dotenv==1.0.0
 cryptography==41.0.3
 flask-cors==5.0.0
 flask_sqlalchemy==3.0.2  # Agrega esta línea
+numpy
+pycuda
+opencv-python-headless
