--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,17 @@ services:
     container_name: flask_backend
     ports:
       - "5000:5000"
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]  # Habilita el uso de GPU
     environment:
       - DATABASE_URL=mysql+pymysql://root:1234@mysql:3306/instagram
+      - NVIDIA_VISIBLE_DEVICES=all  # Configura la visibilidad de GPU
+      - NVIDIA_DRIVER_CAPABILITIES=compute,utility
     depends_on:
       - mysql
     volumes:
