--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,4 +4,5 @@ PyMySQL==1.0.2
 python-dotenv==1.0.0
 cryptography==41.0.3
 flask-cors==5.0.0
-flask_sqlalchemy==3.0.2  # Agrega esta línea
+flask_sqlalchemy==3.0.2
+python-dateutil==2.8.2  # Agrega esta línea
